--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -10,4 +10,4 @@ with:
 repoToken: ${{ secrets.GITHUB_TOKEN }}
 firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
 channelId: live
-projectId: YOUR_PROJECT
+projectId: tale-of-heros---fangame
