--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,13 +1,19 @@
-push:
-branches: [ main ]
+name: Deploy to Firebase Hosting
+
+on:
+  push:
+    branches: [ "main" ]   # main에 푸시될 때 배포
+
 jobs:
-deploy:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v4
-- uses: FirebaseExtended/action-hosting-deploy@v0
-with:
-repoToken: ${{ secrets.GITHUB_TOKEN }}
-firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-channelId: live
-projectId: tale-of-heros---fangame
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          # ↓ 시크릿 이름은 네 레포 Settings > Secrets > Actions에서 보이는 정확한 이름으로!
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TALE_OF_HEROS___FANGAME }}
+          channelId: live
+          projectId: tale-of-heros---fangame
