--- a/.github/workflows/sync-main-to-staging.yml
+++ b/.github/workflows/sync-main-to-staging.yml
@@ -12,10 +12,19 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: repo-sync/pull-request@v2
+      # ✅ 레포를 먼저 체크아웃 (전체 히스토리 필요)
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # ✅ main → staging 자동 PR 생성/업데이트
+      - name: Create PR main → staging
+        uses: repo-sync/pull-request@v2
         with:
           source_branch: "main"
           destination_branch: "staging"
           pr_title: "Sync main → staging"
           pr_body: "자동 PR: main 변경분을 staging으로 맞춥니다."
+          pr_allow_empty: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
