--- a/.github/workflows/functions-staging.yml
+++ b/.github/workflows/functions-staging.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # V 이 부분을 추가하여 GitHub 시크릿을 환경 변수로 설정합니다.
+    env:
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: google-github-actions/auth@v2
@@ -21,4 +24,5 @@ jobs:
       - if: hashFiles('functions/tsconfig.json') != ''
         run: npm run build
         working-directory: functions
-      - run: firebase deploy --only functions --project tale-of-heros-staging
+      # V 배포 명령어에 --set-env-vars 옵션을 추가합니다.
+      - run: firebase deploy --only functions --project tale-of-heros-staging --set-env-vars "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}"
