--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,7 @@
 {
+  "functions": {
+    "source": "functions"
+  },
   "hosting": {
     "public": "public",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
@@ -9,7 +12,6 @@
       { "source": "**/*.json", "headers": [{ "key": "Cache-Control", "value": "no-store" }] },
       { "source": "**/*.map",  "headers": [{ "key": "Cache-Control", "value": "no-store" }] },
       { "source": "**/*.{woff,woff2,ttf,otf}", "headers": [{ "key": "Cache-Control", "value": "no-store" }] },
-
       { "source": "**/*.{png,jpg,jpeg,webp,avif,gif,svg}",
         "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] }
     ]
