Update deploy-functions.yml (#9)

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -37,4 +37,5 @@ jobs:
       - name: Deploy to Firebase Functions
         run: |
           firebase --version
-          firebase deploy --only functions --project tale-of-heros---fangame --non-interactive
+          firebase deploy --only functions --project tale-of-heros---fangame --non-interactive --force
+
